--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div>
       <video class="avatar" src="./imagenex/logo .mp4" autoplay muted loop width="150"></video>
       <h1>Login</h1>
-      <div class="form">
+      <div class="from">
         <form>
           <!--USER-->
           <label for="user">Usuario</label>
