--- a/index.html
+++ b/index.html
@@ -10,8 +10,15 @@
     <link rel="stylesheet" href="./css/form.css">
     <title>Login</title>
   </head>
+
+
+
+
+
+
+
   <body>
-    <div>
+    <div class="login-box">
       <video class="avatar" src="./imagenex/logo .mp4" autoplay muted loop width="150"></video>
       <h1>Login</h1>
       <div class="from">
