creando el registro de cuenta

--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
            </div>
 
           <button class="btn btn-danger" id="button" type="submit" onclick ="validarRegistro(email,nombre,password1,password2)">.ڿڰۣ- Ingresar .ڿڰۣ-</button>
-          <button type="button" class="btn btn-danger">.ڿڰۣ- Crear una cuenta .ڿڰۣ-</button>
-
+         
+          <a class="btn btn-primary" href="./crea.html" role="button">.ڿڰۣ- Crear una cuenta .ڿڰۣ-</a>
         </form>
         
       </div>
