modificaciones de registro

--- a/crea.html
+++ b/crea.html
@@ -28,10 +28,10 @@
                 <input type="email" id="email"  aria-describedby="emailHelp" required>
 
                 <!--Contraseña-->
-                <label for="password1">.ڿڰۣ- Contraseña .ڿڰۣ-</label>
+                <label for="password1">.ڿڰۣ-  Contraseña .ڿڰۣ-</label>
                 <input type="password" id="password1" required>
 
-                <!--Confirmacion de la Contraseña-->
+                <!--validacion-->
                 <label for="password2">.ڿڰۣ- Validar contraseña .ڿڰۣ-</label>
                 <input type="password" id="password2" required>
 
@@ -43,7 +43,7 @@
 
             </form>
         </div>
-        <script src="./js/main.js"></script>
+        <script src="./js/reg.js"></script>
 
 
         <!-- Optional JavaScript; choose one of the two! -->
