--- a/ingreso.html
+++ b/ingreso.html
@@ -35,9 +35,11 @@
             <span id="invalid"></span>
            </div>
 
-          <button class="btn btn-danger" id="button" type="submit" onclick ="validarRegistro(email,nombre,password1,password2)">.ڿڰۣ- Ingresar .ڿڰۣ-</button>
+           <button class="btn btn-danger" id="button" type="submit" onclick ="validarRegistro(email,nombre,password1,password2)">.ڿڰۣ- Ingresar .ڿڰۣ-</button>
          
-          <a class="btn btn-primary" href="./crea.html" role="button">.ڿڰۣ- Crear una cuenta .ڿڰۣ-</a>
+           <a class="btn btn-primary" href="./registro.html" role="button">.ڿڰۣ- Crear una cuenta .ڿڰۣ-</a>
+
+           <a class="btn btn-primary" href="./cliente.html" role="button">.ڿڰۣ- Ingreso de clientes .ڿڰۣ-</a>  
         </form>
         
       </div>
