--- a/cliente.html
+++ b/cliente.html
@@ -23,15 +23,15 @@
                 <label for="nombre">.ڿڰۣ- Nombre .ڿڰۣ-</label>
                 <input type="text" id="nombre" required>
 
-                <!--apellido-->
+                <!--correo-->
                 <label for="apellido">.ڿڰۣ- Apellido .ڿڰۣ-</label>
                 <input type="text" id="apellido" required>
 
-                <!--cui-->
+                <!--Contraseña-->
                 <label for="cui">.ڿڰۣ-  -CUI- .ڿڰۣ-</label>
                 <input type="number" id="cui" required>
 
-                <!--depto-->
+                <!--validacion-->
                 <label for="depto">.ڿڰۣ- Departamento .ڿڰۣ-</label>
                 <input type="text" id="depto" required>
 
