--- a/ingreso.html
+++ b/ingreso.html
@@ -29,7 +29,7 @@
 
           <!--PASSWORD-->
            <label for="password1">Contraseña</label>
-           <input type="text" id="password1" required>
+           <input type="password" id="password1" required>
 
            <div class="mb-3">
             <span id="invalid"></span>
